[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/EThemeButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/ThemeSelect.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="Settings" type="VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 41.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 4 )

[node name="DrawTabs" type="HBoxContainer" parent="."]
margin_right = 260.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="DrawTabs"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Draw Tabs"

[node name="CheckButton" type="CheckButton" parent="DrawTabs"]
margin_left = 206.0
margin_right = 260.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="DrawSpaces" type="HBoxContainer" parent="."]
margin_top = 38.0
margin_right = 260.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="DrawSpaces"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Draw Spaces"

[node name="CheckButton" type="CheckButton" parent="DrawSpaces"]
margin_left = 206.0
margin_right = 260.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0

[node name="HighlightCurrent" type="HBoxContainer" parent="."]
margin_top = 76.0
margin_right = 260.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="HighlightCurrent"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Highlight Current Line"

[node name="CheckButton" type="CheckButton" parent="HighlightCurrent"]
margin_left = 206.0
margin_right = 260.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="ShowLineNumbers" type="HBoxContainer" parent="."]
margin_top = 114.0
margin_right = 260.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="ShowLineNumbers"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Show Line Numbers"

[node name="CheckButton" type="CheckButton" parent="ShowLineNumbers"]
margin_left = 206.0
margin_right = 260.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="Caret" type="HBoxContainer" parent="."]
margin_top = 152.0
margin_right = 260.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="Caret"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Caret Block Mode"

[node name="CheckButton" type="CheckButton" parent="Caret"]
margin_left = 206.0
margin_right = 260.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Theme" type="HBoxContainer" parent="."]
margin_top = 190.0
margin_right = 260.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="Theme"]
margin_right = 56.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Theme"

[node name="ThemeButton" type="OptionButton" parent="Theme"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
script = ExtResource( 3 )

[node name="Syntax_Theme" type="HBoxContainer" parent="."]
margin_top = 220.0
margin_right = 260.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="Syntax_Theme"]
margin_right = 107.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Syntax Theme"

[node name="EThemeButton" type="OptionButton" parent="Syntax_Theme"]
margin_left = 111.0
margin_right = 260.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
script = ExtResource( 1 )
[connection signal="toggled" from="DrawTabs/CheckButton" to="." method="draw_tabs_toggled"]
[connection signal="toggled" from="DrawSpaces/CheckButton" to="." method="draw_spaces_toggled"]
[connection signal="toggled" from="HighlightCurrent/CheckButton" to="." method="highlight_current_line_toggled"]
[connection signal="toggled" from="ShowLineNumbers/CheckButton" to="." method="show_line_numbers_toggled"]
[connection signal="toggled" from="Caret/CheckButton" to="." method="caret_toggled"]
[connection signal="item_selected" from="Theme/ThemeButton" to="Theme/ThemeButton" method="theme_select"]
[connection signal="item_selected" from="Syntax_Theme/EThemeButton" to="Syntax_Theme/EThemeButton" method="_on_EThemeButton_item_selected"]
